# Sobel-Edge-Detection

./: Plan.txt
sobel_edge_cuda/: .gitignore  CMakeLists.txt  README.md
sobel_edge_cuda/src/: main.cpp  sobel_kernel.cu
